fix(image): fix exception handling (#12)
- Fix exception handling at infra layer by adding a DatabaseException classe and handling it in GlobalExceptionHandler class
- Delete unused exception classes and unused methods
- Add compose.yml for local environment setup and add spring-boot-docker-compose starter dependency
- Renaming port classes
- add json-path dependency to dependencyManagement to fix CVE
- Refactor controller interface to add all the annnotations handled by interface